test/statements/ferguson/ref-to-nil.good
ref-to-nil.chpl:1: error: References must be non-nil
ref-to-nil.chpl:2: error: References must be non-nil
ref-to-nil.chpl:2: error: Cannot set a non-const reference to a const variable.
