test/statements/ferguson/ref-to-nil.chpl
const ref x = nil;
ref y = nil;
